feat(coverage-tool): create sample application
- CRU(create, read, update) use case by JPA
- Coverage by JaCoCo

#13