@@ -1,9 +1,10 @@
 plugins {
 	kotlin("jvm") version "1.9.25"
 	kotlin("plugin.spring") version "1.9.25"
+	kotlin("plugin.jpa") version "1.9.25"
 	id("org.springframework.boot") version "3.3.5"
 	id("io.spring.dependency-management") version "1.1.6"
-	kotlin("plugin.jpa") version "1.9.25"
+	jacoco
 }
 
 group = "com.tistory.namocom"
@@ -22,9 +23,21 @@ repositories {
 dependencies {
 	implementation("org.springframework.boot:spring-boot-starter-data-jpa")
 	implementation("org.jetbrains.kotlin:kotlin-reflect")
-	testImplementation("org.springframework.boot:spring-boot-starter-test")
+	runtimeOnly("com.h2database:h2")
+	testImplementation(dependencyNotation = "org.springframework.boot:spring-boot-starter-test") {
+		exclude(module = "mockito-core")
+	}
 	testImplementation("org.jetbrains.kotlin:kotlin-test-junit5")
+	val kotestVersion = "5.9.1"
+	testImplementation("io.kotest:kotest-runner-junit5:${kotestVersion}")
+	testImplementation("io.kotest:kotest-property-jvm:${kotestVersion}")
+	testImplementation("io.kotest:kotest-extensions-now:${kotestVersion}")
+	testImplementation("io.kotest.extensions:kotest-extensions-spring:1.1.3")
+	testImplementation("io.mockk:mockk:1.13.9")
+	testImplementation("com.ninja-squad:springmockk:4.0.2")
+	testImplementation("com.appmattus.fixture:fixture:1.2.0")
 	testRuntimeOnly("org.junit.platform:junit-platform-launcher")
+	testRuntimeOnly("com.h2database:h2")
 }
 
 kotlin {
@@ -41,4 +54,16 @@ allOpen {
 
 tasks.withType<Test> {
 	useJUnitPlatform()
+	jvmArgs = listOf("-Xshare:off", "-XX:+EnableDynamicAgentLoading")
+}
+
+tasks.test {
+	maxHeapSize = "6400m"
+}
+
+tasks.jacocoTestReport {
+	dependsOn(tasks.named("test"))
+	reports {
+		xml.required.set(true)
+	}
 }
